--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <div class="top">
-        <img class="top-cloud" src="Images/cloud.png" alt="cloud.png">
+        <img class="top-cloud" src="cloud.png" alt="cloud.png">
         <h1>I'm Adil</h1>
     <h2>a programmer and tester. </h2>
-    <img class="bottom-cloud "src="Images/cloud.png" alt="cloud.png">
-    <img src="Images/mountain.png" alt="mountain.png">
+    <img class="bottom-cloud "src="cloud.png" alt="cloud.png">
+    <img src="mountain.png" alt="mountain.png">
     </div>
     <div class="middle-container">
         <div>
