--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/mohd-adil-ba31a0211/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://github.com/mohdadil1/My-Personal-website">Website</a>
     <p class="copyright">2023© Mohd Adil.</p>
   </div>
   
