--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div>
           <img class ="circular" src="https://avatars.githubusercontent.com/u/39762134?v=4" alt="adil">
           <h2>Hello.</h2>
-          <p class="intro">I am an Programmer and Tester.I worked at TCS.I❤️ coding and challanges.</p>
+          <p class="intro">I am an Programmer and Tester.I worked at TCS.<br>I❤️ coding and challanges.</p>
         </div>
         <hr>
         <div class="skills">
