--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <h2>Get In Touch</h2>
           <h3>If you are a good listener.</h3>
           <p class="contact-message">Conversation is the key element of our thoughts.We can code while we talking to each other.</p>
-          <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
+          <a class="btn" href="mailto:adilm925@email.com">CONTACT ME</a>
         </div>
       </div>
          
